# yrap

./: .gitignore  LICENSE.md  README.md  docker-compose.yml  seed.sh  test.sh
backend/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/app/: app.py  config.py  helper.py  main.py  models.py
backend/web/: settings.py  urls.py
backend/yrap/: apps.py  models.py  urls.py
backend/yrap/api/: serializers.py  urls.py  views.py
backend/yrap/migrations/: 0001_initial.py
docs/: usage.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: Router.tsx  index.css  index.tsx
frontend/src/auth/: protectedRoutes.tsx
frontend/src/components/UI/: OuterFrame.module.css  OuterFrame.module.scss  OuterFrame.tsx  contentFrame.module.css  contentFrame.module.scss  contentFrame.tsx  footer.module.css  footer.module.scss  footer.tsx  index.ts  navbar.module.css  navbar.module.scss  navbar.tsx
frontend/src/components/dashboard/: dashboard.module.css  dashboard.module.scss  dashboard.tsx
frontend/src/components/errors/: page404.tsx
frontend/src/data/: data.ts
frontend/src/functions/: queries.tsx
frontend/src/queries/: loginQueries.ts  projectQueries.ts  projectsQueries.ts
frontend/src/types/: IActions.ts  IProjects.ts  IUpdateAction.ts  IUsers.ts
frontend/src/utils/: config.ts  localTime.ts
frontend/yrap_front/: package-lock.json  package.json
web/: Dockerfile  pyproject.toml  requirements.txt
web/web/: settings.py
yrap_nginx/: Dockerfile  default.conf
(+11 files in other folders)
