[tool.poetry]
name = "web2"
version = "0.1.0"
description = ""
authors = ["Vernon Swanepoel <frantic.naturalist@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
